--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "local/helm-ros"]
 	path = local/helm-ros
-	url = git@github.com:davidlandry93/helm-ros
+	url = https://github.com/JakeBrawer/helm-ros.git
